--- a/punctuality (frontend)/punctuality/src/Styles/style.css
+++ b/punctuality (frontend)/punctuality/src/Styles/style.css
@@ -1,4 +1,13 @@
 .header img {
   border-radius: 50%; }
 
+.badge {
+  font-size: 0.8em;
+  border-radius: 4px;
+  padding: 0.2em 0.4em;
+  margin: 0 0.4em; }
+  .badge.red-badge {
+    background-color: red;
+    color: white; }
+
 /*# sourceMappingURL=style.css.map */
