--- a/punctuality (frontend)/punctuality/src/Styles/style.scss
+++ b/punctuality (frontend)/punctuality/src/Styles/style.scss
@@ -3,3 +3,15 @@
     border-radius: 50%;
   }
 }
+
+.badge {
+  font-size: 0.8em;
+  border-radius: 4px;
+  padding: 0.2em 0.4em;
+  margin: 0 0.4em;
+
+  &.red-badge {
+    background-color: red;
+    color: white;
+  }
+}
