--- a/punctuality (frontend)/punctuality/src/Styles/style.css
+++ b/punctuality (frontend)/punctuality/src/Styles/style.css
@@ -10,4 +10,60 @@
     background-color: red;
     color: white; }
 
+.ui.container.datepickers-container {
+  display: flex;
+  justify-content: space-evenly; }
+  .ui.container.datepickers-container .datepicker-container {
+    margin: 0 1em; }
+
+#navbar {
+  height: 100px;
+  background-color: #e6e6e6;
+  color: #2154DD;
+  display: flex;
+  justify-content: space-between; }
+  #navbar .nav-left {
+    display: flex; }
+    #navbar .nav-left .logo-image > img {
+      width: 80px;
+      margin: 10px; }
+    #navbar .nav-left .logo-title h1 {
+      font-family: "Montserrat", sans-serif;
+      font-size: 2em;
+      font-weight: 900;
+      margin: 0.5em 0 0.2em 0; }
+    #navbar .nav-left .logo-title h3 {
+      font-family: "Montserrat", sans-serif;
+      font-size: 1.5em;
+      font-weight: 500;
+      margin: 0.3em 0 0.2em 0.1em; }
+  #navbar .nav-right {
+    flex-grow: 1;
+    max-width: 600px;
+    margin-right: 3em; }
+    #navbar .nav-right .nav-ul {
+      margin: 0;
+      height: 100%;
+      list-style: none;
+      display: flex;
+      justify-content: space-around;
+      align-items: center; }
+      #navbar .nav-right .nav-ul li {
+        text-transform: uppercase;
+        font-family: "Montserrat", sans-serif;
+        display: flex;
+        padding: 1em 0;
+        border-bottom: 2px solid rgba(0, 0, 0, 0); }
+        #navbar .nav-right .nav-ul li:hover {
+          border-bottom: 2px solid #7695ea;
+          color: #7695ea;
+          cursor: pointer; }
+        #navbar .nav-right .nav-ul li i {
+          margin-left: 0.3em; }
+        #navbar .nav-right .nav-ul li.active {
+          border-bottom: 2px solid #2154DD; }
+
+.profile {
+  margin-top: 2em; }
+
 /*# sourceMappingURL=style.css.map */
