--- a/punctuality (frontend)/punctuality/src/Styles/style.scss
+++ b/punctuality (frontend)/punctuality/src/Styles/style.scss
@@ -1,5 +1,6 @@
 $m-blue: #2154DD;
 $m-blue-light: #7695ea;
+$m-blue-dark:#2d3e6f;
 $m-white: #e6e6e6;
 $transparent: rgba(0,0,0,0);
 
@@ -33,8 +34,8 @@ $transparent: rgba(0,0,0,0);
 
 #navbar {
   height: 100px;
-  background-color: $m-white;
-  color: $m-blue;
+  background-color: $m-blue-dark;
+  color: $m-white;
   display: flex;
   justify-content: space-between;
 
@@ -49,7 +50,7 @@ $transparent: rgba(0,0,0,0);
       h1 {
         font-family: "Montserrat", sans-serif;
         font-size: 2em;
-        font-weight: 900;
+        font-weight: 800;
         margin: 0.5em 0 0.2em 0;
       }
       h3 {
@@ -79,6 +80,7 @@ $transparent: rgba(0,0,0,0);
         display: flex;
         padding: 1em 0;
         border-bottom: 2px solid $transparent;
+        transition: color 200ms, border 200ms;
 
         &:hover {
           border-bottom: 2px solid $m-blue-light;
@@ -91,7 +93,7 @@ $transparent: rgba(0,0,0,0);
         }
 
         &.active {
-          border-bottom: 2px solid $m-blue;
+          border-bottom: 2px solid $m-white;
         }
       }
     }
