--- a/punctuality (frontend)/punctuality/src/Styles/style.css
+++ b/punctuality (frontend)/punctuality/src/Styles/style.css
@@ -1,3 +1,8 @@
+#main {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; }
+
 .header img {
   border-radius: 50%; }
 
@@ -65,6 +70,26 @@
           border-bottom: 2px solid #e6e6e6; }
 
 .profile {
-  margin-top: 2em; }
+  margin: 2em 0 4em 0;
+  flex-grow: 1; }
+
+#footer {
+  height: 50px;
+  width: 100%;
+  background-color: #2d3e6f;
+  color: #e6e6e6;
+  display: flex;
+  justify-content: center;
+  line-height: 50px; }
+  #footer .copyright {
+    font-family: "Montserrat", sans-serif; }
+  #footer .links {
+    margin-left: 4%;
+    float: right; }
+    #footer .links a {
+      color: #e6e6e6;
+      transition: color 200ms; }
+      #footer .links a:hover {
+        color: #7695ea; }
 
 /*# sourceMappingURL=style.css.map */
